--- a/client/.example.env
+++ b/client/.example.env
@@ -1,3 +1,4 @@
 VITE_ALCHEMY_APY_KEY =
-VITE_SEPOLIA_PRIVATE_KEY =
-VITE_ETHER_SCAN_API_KEY =
+VITE_THIRDWEB_APY_KEY = ""
+VITE_SEPOLIA_PRIVATE_KEY = ""
+VITE_ETHER_SCAN_API_KEY = ""
